# FormalLanguages

./: .gitignore  CMakeLists.txt  Example.pal  PAL.md  README.md  build.sh  run.sh
include/: CDFA.hpp  DFA.hpp  DOA.hpp  EpsilonTransitionsRemoving.hpp  MinimalCDFA.hpp  MinimalDFA.hpp  NFA.hpp  PAL.hpp  SingleLetterTransitions.hpp
src/: CDFA.cpp  CMakeLists.txt  DFA.cpp  DOA.cpp  EpsilonTransitionsRemoving.cpp  Main.cpp  MinimalCDFA.cpp  MinimalDFA.cpp  NFA.cpp  PAL.cpp  SingleLetterTransitions.cpp
test/: CDFATests.cpp  CMakeLists.txt  DFATests.cpp  EpsilonTransitionsRemovingTests.cpp  MinimalCDFATests.cpp  MinimalDFATests.cpp  NFATests.cpp  SingleLetterTransitionsTests.cpp
